multiple turbine types

--- a/windIO/plant/wind_farm.yaml
+++ b/windIO/plant/wind_farm.yaml
@@ -1,10 +1,9 @@
 input_format_version: 0
 title: Definition of the wind energy conversion system
-description: A file used to define the built environment (and other non-tangible components like O&M)
+description: A file used to define either a single wind farm or multiple wind farms with turbine type mappings and additional built environment components
 required:
   - name
   - layouts
-  - turbines
 optional:
   - electrical_substations
   - electrical_collection_array
@@ -15,22 +14,54 @@ additionalProperties: false
 # PROPERTIES
 properties:
   name:
-    description: Name of the wind farm
+    description: Name of the wind farm or wind farm system
     type: string
+
   layouts:
-    description: Position of wind turbines
-    type: object
-    required:
-      - initial_layout
-    additionalProperties: false
-    properties:
-      initial_layout:
-        $ref: "#/definitions/initial_layout"
+    description: Position of wind turbines. Supports single or multiple layouts.
+    oneOf:  # Allow either single layout as an object or multiple layouts as an array
+      - type: object
+        required:
+          - coordinates
+        additionalProperties: false
+        properties:
+          coordinates:
+            description: List of turbine coordinates for this layout
+            $ref: "common.yaml#/definitions/coordinates"
+      - type: array
+        items:
+          type: object
+          required:
+            - coordinates
+          additionalProperties: false
+          properties:
+            coordinates:
+              description: List of turbine coordinates for this layout
+              $ref: "common.yaml#/definitions/coordinates"
+            turbine_types:
+              description: (Optional) List of turbine types corresponding to turbine positions.
+              type: array
+              items:
+                type: integer
+              optional: true
+
+  turbine:
+    description: (Optional) A single turbine model used for the entire wind farm
+    $ref: "turbine.yaml#"
+    optional: true
 
   turbines:
-    description: Turbine models installed in the WES
+    description: (Optional) The full turbine definition for the entire wind farm
     type: object
-    $ref: "turbine.yaml#"
+    additionalProperties: true
+    optional: true
+
+  turbine_types:
+    description: (Optional) List of turbine types used for layouts. Required if turbine_types is used in layouts.
+    type: object
+    additionalProperties:
+      $ref: "turbine.yaml#"
+    optional: true
 
   electrical_substations:
     description: Information about electrical substations
@@ -70,51 +101,40 @@ properties:
         properties:
           cable_type:
             title: Cable type
-            description: List of aviable cable types
+            description: List of available cable types
             type: array
             units: mm2
           cross_section:
             title: Cross section
-            description: List of cables cross section
+            description: List of cable cross sections
             type: array
             units: mm2
           capacity:
             title: Cable capacity
-            description: List of cable capacity
+            description: List of cable capacities
             type: array
             units: WindTurbine / Cable
           cost:
             title: Cable cost
-            description: List of cables cost
+            description: List of cable costs
             type: array
             units: euro/meter
 
 definitions:
-  initial_layout:
-    title: Wind turbine layout
+  coordinates:
+    title: Wind turbine or substation coordinates
     type: object
     required:
-      - coordinates
+      - x
+      - y
     additionalProperties: false
     properties:
-      coordinates:
-        title: Wind turbine coordinate
-        $ref: "common.yaml#/definitions/coordinates"
+      x:
+        type: array
+        items:
+          type: number
+      y:
+        type: array
+        items:
+          type: number
 
-  electrical_substation:
-    title: Electrical substation
-    type: object
-    required:
-      - coordinates
-    optional:
-      - capacity
-    additionalProperties: false
-    properties:
-      coordinates:
-        title: Substation coordinates
-        $ref: "common.yaml#/definitions/coordinates"
-      capacity:
-        title: Substation capacity
-        description: Capacity of the electrical substation in megawatts
-        type: number
-        units: MW
