--- a/windIO/plant/wind_energy_system.yaml
+++ b/windIO/plant/wind_energy_system.yaml
@@ -167,6 +167,181 @@ properties:
             #  title: ss_alpha factor for SelfSimilarityDeficit2020
             #  type: float
 
+        HPC_config:
+          title: Information to handle parallel runs on HPC clusters
+          type: object
+          additionalProperties: true
+          properties:
+            run_node_number:
+              title: number of nodes used to run the wind farm flow case
+              type: integer
+            run_ntasks_per_node:
+              title: number of tasks per node
+              type: integer
+            run_wall_time_hours:
+              title: wall time for each run
+              type: integer
+            run_partition:
+              title: run partition name
+              type: string
+            wckey:
+              title: wckey name if any
+              type: string
+            #
+            mesh_node_number:
+              title: number of nodes used to run the wind farm flow case
+              type: integer
+            mesh_ntasks_per_node:
+              title: number of tasks per node
+              type: integer
+            mesh_wall_time_hours:
+              title: wall time for each run
+              type: integer #specify hours ?
+            mesh_partition:
+              title: run partition name
+              type: string
+                  
+        mesh:
+          title: meshing the wind farm domain for code_saturne calculation
+          type: object
+          properties:
+            remesh:
+              title: provide new mesh for the domain with farm characteristics
+              type: boolean
+            mesh_file_name:
+              title: mesh file path/name, existing if remesh is False
+              type: string
+        run_type:
+          title: type of run with the flow api
+          type: string
+          enum: ['simulate','postprocess']
+
+        layers_description:
+          title: description of the layers needed for the APM model
+          type: object
+          additionalProperties: true
+          properties:
+            farm_layer_height:
+              title: height of the layer containing the farm
+              type: float
+            number_of_layers:
+              title: number of layers in the free atmosphere
+              type: integer
+
+        wake_tool:
+          title: choice of wake tool for coupling to wayve
+          type: string
+          enum: ['pywake', 'foxes']
+
+        APM_additional_terms:
+          title: list of terms added to the APM model
+          type: array
+          enum: ['term_name_1', 'term_name_2']
+
+
+      #~~
+      model_outputs_specification:  
+        title: Outputs
+        description: Output parameters and configurations for the wind energy system
+        type: object
+        additionalProperties: true
+        properties:
+          output_folder:
+            title: output folder name
+            description: name of the folder where the output files are written
+            type: string
+            
+          cases_run:
+            title: Handling of the timeseries runs
+            type: object
+            additionalProperties: true
+            properties:
+              all_occurences:
+                title: active to run all the occurences from the time series
+                type: boolean
+              subset:
+                title: list of times to run
+                type: array
+              
+          turbine_outputs:
+            title: outputs related to each turbine
+            description: outputs for each turbine as the individual turbine power, velocity..
+            type: object
+            additionalProperties: true
+            properties:
+              turbine_nc_filename:
+                title: Name of the file that will contain the turbine outputs
+                description: this is an netcdf file containing the required outputs
+                type: string
+              output_variables:
+                title: Output Variables
+                description: List of turbine variables to output
+                type: array
+                items:
+                  type: string
+
+          flow_field:
+            title: configuration of the flow field outputs
+            description:  flow field output variables and files
+            type: object
+            additionalProperties: true
+            properties:
+              report:
+                title: Report
+                description: Flag to output flow fields
+                type: boolean
+              flow_nc_filename:
+                title: Name of the file that will contain the flow field
+                description: this is an netcdf file containing the required outputs
+                type: string
+              output_variables:
+                title: Output Variables
+                description: List of flow field variables to output
+                type: array
+                items:
+                  type: string
+                  
+              z_planes:
+                title: planes at which the flow field variables will be stored
+                description: description of vertical planes
+                type: object
+                additionalProperties: true
+                properties:
+                  z_sampling:
+                    title: type of vertical discretization
+                    type: string
+                    enum: ['hub_heights', 'plane_list']
+                  z_list:
+                    title: z plane values for sample type 'grid'
+                    type: array
+                    items:
+                      type: float
+                  xy_sampling:
+                    title: type of horizontal discretization
+                    type: string
+                    enum: ['grid', 'default']
+                  x_bounds:
+                    title: x bounds for sample type 'grid'
+                    type: array
+                    items:
+                      type: float
+                  y_bounds:
+                    title: y bounds for sample type 'grid'
+                    type: array
+                    items:
+                      type: float
+                  Nx:
+                    title: number of points in the x direction for 'grid'
+                    type: integer
+                  Ny:
+                    title: number of points in the y direction for 'grid'
+                    type: integer
+                  dx:
+                    title: x grid spacing for sample type 'grid'
+                    type: float
+                  dy:
+                    title: y grid spacing for sample type 'grid'
+                    type: float
 
       #~~
       net_AEP:
