move to ultra-restrictive schema, defaulting to no additional prperties

--- a/windIO/plant/wind_energy_system.yaml
+++ b/windIO/plant/wind_energy_system.yaml
@@ -8,7 +8,6 @@ required:
 
 
 # PROPERTIES
-additionalProperties: false 
 properties:
   #~
   name:
@@ -26,7 +25,6 @@ properties:
     title: Attributes
     description: Specific attributes of the entire wind energy system
     type: object
-    additionalProperties: false
     properties:
 
       #~~
@@ -34,220 +32,219 @@ properties:
         title: Flow model
         description: Flow model used in wind farm design
         type: object
-        additionalProperties: false
         properties:
           name:
             title: Flow model name
             type: string
             enum: ["foxes", "pyWake", "pyWakeEllipSys", "codeSaturne", "wayve", "floris"]
       analysis:
-        wind_deficit_model:
-          title: Wind deficit model
-          description: Wake wind deficit model used in AEP calculations
-          type: object
-          additionalProperties: false 
-          properties:
-            name:
-              title: Wake model name
+        properties:
+          wind_deficit_model:
+            title: Wind deficit model
+            description: Wake wind deficit model used in AEP calculations
+            type: object
+            properties:
+              name:
+                title: Wake model name
+                type: string
+                enum: ["Jensen", "Bastankhah2014", "Bastankhah2016", "TurbOPark", "SuperGaussian"]
+              wake_expansion_coefficient:
+                title: wake expansion coefficient
+                type: object
+                properties:
+                   k_a:
+                      title: Wake expansion coefficient
+                      type: number # (default 0.04)
+                   k_b:
+                      title: Factor to multiply TI
+                      type: number # (default 0)
+                   free_stream_ti:
+                      title: Flag deciding to use freestream or waked TI
+                      type: boolean # (default to False)
+              ceps:
+                title: Bastankhah c_epsilon factor
+                type: number
+              use_effective_ws:
+                title: flag to use freestream wind speed for deficit computation
+                type: boolean
+              
+          axial_induction_model:
+              title: axial induction model
               type: string
-              enum: ["Jensen", "Bastankhah2014", "Bastankhah2016", "TurbOPark", "SuperGaussian"]
-            wake_expansion_coefficient:
-              title: wake expansion coefficient
-              type: object
-              additionalProperties: false 
-              properties:
-                 k_a:
-                    title: Wake expansion coefficient
-                    type: number # (default 0.04)
-                 k_b:
-                    title: Factor to multiply TI
-                    type: number # (default 0)
-                 free_stream_ti:
-                    title: Flag deciding to use freestream or waked TI
-                    type: bool # (default to False)
-            ceps:
-              title: Bastankhah c_epsilon factor
-              type: number
-            use_effective_ws:
-              title: flag to use freestream wind speed for deficit computation
-              type: bool
-            
-        axial_induction_model:
-            title: axial induction model
+              enum: ["1D", "Madsen"]
+  
+          deflection_model:
+            title: Deflection model
+            description: defines the deviation of the path of the wake centerline in the crossflow direction (only for wake steering)
+            #description: Deflection model used in AEP calculations
+            type: object
+            properties:
+              name:
+                title: Deflection model name
+                type: string
+                enum: ["None", "Jimenez", "Batankhah2016"]
+              beta:
+                title: Jimenez deflection coefficient
+                type: number
+                # (Batankhah2016 only works with Batankhah2016 wind deficit)
+              
+          turbulence_model:
+            title: Turbulence model
+            description: Turbulence model used in AEP calculations
+            type: object
+            properties:
+              name:
+                title: Turbulence model name
+                type: string
+                enum: ["STF2005", "STF2017", "IEC-TI-2019", "CrespoHernandez", "GCL", "None"]
+                # Q: IEC versus Franson
+                # note: We assume same shape as wind deficit for now
+              coefficents:
+                title: coefficients 
+                type: array
+              
+          superposition_model:
+            title: Superposition model
+            description: Superposition model used in AEP calculations
+            type: object
+            properties:
+              ws_superposition:
+                title: Speed superposition model name
+                type: string
+                enum: ["Linear", "Squared", "Max", "Product"]
+              ti_superposition:
+                title: TI superposition model name
+                type: string
+                enum: ["Linear", "Squared", "Max", "Product"]
+  
+          rotor_averaging:
+            title: Rotor average
+            description: Rotor averaging model used in AEP calculations
+            type: object
+            properties:
+              grid:
+                title: Grid type
+                type: string
+              n_x_grid_points:
+                title: Number of x grid points
+                type: integer
+              n_y_grid_points:
+                title: Number of y grid points
+                type: integer
+              background_averaging: # (velocity and TI)
+                title: Averaging model for background velocity and TI
+                type: string
+                enum: ["center", "grid"]
+              wake_averaging: # velocity and TI averaging
+                title: Averaging model for wake velocity and TI
+                type: string
+                enum: ["center", 'grid'] # Assume the grid is not used for tophat model because analytic solution is available
+              wind_speed_exponent_for_power:
+                type: number
+              wind_speed_exponent_for_ct:
+                type: number
+  
+  
+          blockage_model:
+            title: Blockage model
+            description: Blockage averaging model used in AEP calculations
+            type: object
+            properties:
+              name:
+                title: Blockage model name
+                type: string
+                enum: ['None', 'RankineHalfBody', 'Rathmann', 'SelfSimilarityDeficit', 'SelfSimilarityDeficit2020']
+              parameters:
+                title: Blockage Model Parameters
+                type: array
+              #ss_alpha:
+              #  title: ss_alpha factor for SelfSimilarityDeficit2020
+              #  type: number
+  
+          HPC_config:
+            title: Information to handle parallel runs on HPC clusters
+            type: object
+            properties:
+              run_node_number:
+                title: number of nodes used to run the wind farm flow case
+                type: integer
+              run_ntasks_per_node:
+                title: number of tasks per node
+                type: integer
+              run_wall_time_hours:
+                title: wall time for each run
+                type: integer
+              run_partition:
+                title: run partition name
+                type: string
+              wckey:
+                title: wckey name if any
+                type: string
+              #
+              mesh_node_number:
+                title: number of nodes used to run the wind farm flow case
+                type: integer
+              mesh_ntasks_per_node:
+                title: number of tasks per node
+                type: integer
+              mesh_wall_time_hours:
+                title: wall time for each run
+                type: integer #specify hours ?
+              mesh_partition:
+                title: run partition name
+                type: string
+                    
+          mesh:
+            title: meshing the wind farm domain for code_saturne calculation
+            type: object
+            properties:
+              remesh:
+                title: provide new mesh for the domain with farm characteristics
+                type: boolean
+              mesh_file_name:
+                title: mesh file path/name, existing if remesh is False
+                type: string
+          run_type:
+            title: type of run with the flow api
             type: string
-            enum: ["1D", "Madsen"]
-
-        deflection_model:
-          title: Deflection model
-          description: defines the deviation of the path of the wake centerline in the crossflow direction (only for wake steering)
-          #description: Deflection model used in AEP calculations
-          type: object
-          additionalProperties: false
-          properties:
-            name:
-              title: Deflection model name
-              type: string
-              enum: ["None", "Jimenez", "Batankhah2016"]
-            beta:
-              title: Jimenez deflection coefficient
-              type: number
-              # (Batankhah2016 only works with Batankhah2016 wind deficit)
-            
-        turbulence_model:
-          title: Turbulence model
-          description: Turbulence model used in AEP calculations
-          type: object
-          additionalProperties: false
-          properties:
-            name:
-              title: Turbulence model name
-              type: string
-              enum: ["STF2005", "STF2017", "IEC-TI-2019", "CrespoHernandez", "GCL"]
-              # Q: IEC versus Franson
-              # note: We assume same shape as wind deficit for now
-            coefficents:
-              title: coefficients 
-              type: array
-            
-        superposition_model:
-          title: Superposition model
-          description: Superposition model used in AEP calculations
-          type: object
-          additionalProperties: false
-          properties:
-            ws_superposition:
-              title: Speed superposition model name
-              type: string
-              enum: ["Linear", "Squared", "Max", "Product"]
-            ti_superposition:
-              title: TI superposition model name
-              type: string
-              enum: ["Linear", "Squared", "Max", "Product"]
-
-        rotor_averaging:
-          title: Rotor average
-          description: Rotor averaging model used in AEP calculations
-          type: object
-          additionalProperties: false
-          properties:
-            grid:
-              title: Grid type
-              type: string
-            n_x_grid_points:
-              title: Number of x grid points
-              type: integer
-            n_y_grid_points:
-              title: Number of y grid points
-              type: integer
-            background_averaging: # (velocity and TI)
-              title: Averaging model for background velocity and TI
-              type: string
-              enum: ["center", "grid"]
-            wake averaging: # velocity and TI averaging
-              title: Averaging model for wake velocity and TI
-              type: string
-              enum: ["center", 'grid'] # Assume the grid is not used for tophat model because analytic solution is available
-            wind_speed_exponent_for_power:
-              type: int
-            wind_speed_exponent_for_ct:
-              type: int  
-
-
-        blockage_model:
-          title: Blockage model
-          description: Blockage averaging model used in AEP calculations
-          type: object
-          additionalProperties: false
-          properties:
-            name:
-              title: Blockage model name
-              type: string
-              enum: ['None', 'RankineHalfBody', 'Rathmann', 'SelfSimilarityDeficit', 'SelfSimilarityDeficit2020']
-            parameters:
-              title: Blockage Model Parameters
-              type: array
-            #ss_alpha:
-            #  title: ss_alpha factor for SelfSimilarityDeficit2020
-            #  type: number
-
-        HPC_config:
-          title: Information to handle parallel runs on HPC clusters
-          type: object
-          additionalProperties: false
-          properties:
-            run_node_number:
-              title: number of nodes used to run the wind farm flow case
-              type: integer
-            run_ntasks_per_node:
-              title: number of tasks per node
-              type: integer
-            run_wall_time_hours:
-              title: wall time for each run
-              type: integer
-            run_partition:
-              title: run partition name
-              type: string
-            wckey:
-              title: wckey name if any
-              type: string
-            #
-            mesh_node_number:
-              title: number of nodes used to run the wind farm flow case
-              type: integer
-            mesh_ntasks_per_node:
-              title: number of tasks per node
-              type: integer
-            mesh_wall_time_hours:
-              title: wall time for each run
-              type: integer #specify hours ?
-            mesh_partition:
-              title: run partition name
-              type: string
-                  
-        mesh:
-          title: meshing the wind farm domain for code_saturne calculation
-          type: object
-          properties:
-            remesh:
-              title: provide new mesh for the domain with farm characteristics
-              type: boolean
-            mesh_file_name:
-              title: mesh file path/name, existing if remesh is False
-              type: string
-        run_type:
-          title: type of run with the flow api
-          type: string
-          enum: ['simulate','postprocess']
-
-        layers_description:
-          title: description of the layers needed for the APM model
-          type: object
-          additionalProperties: false
-          properties:
-            farm_layer_height:
-              title: height of the layer containing the farm
-              type: number
-            number_of_layers:
-              title: number of layers in the free atmosphere
-              type: integer
-
-        wake_tool:
-          title: choice of wake tool for coupling to wayve
-          type: string
-          enum: ['pywake', 'foxes']
-
-        APM_additional_terms:
-          title: list of terms added to the APM model
-          type: array
-          enum: ['term_name_1', 'term_name_2']
-
-
+            enum: ['simulate','postprocess']
+  
+          layers_description:
+            title: description of the layers needed for the APM model
+            type: object
+            properties:
+              farm_layer_height:
+                title: height of the layer containing the farm
+                type: number
+              number_of_layers:
+                title: number of layers in the free atmosphere
+                type: integer
+  
+          wake_tool:
+            title: choice of wake tool for coupling to wayve
+            type: string
+            enum: ['pywake', 'foxes']
+  
+          APM_additional_terms:
+            title: list of terms added to the APM model
+            oneOf:
+                - type: array
+                  items:
+                    type: string
+                    enum: ['term_name_1', 'term_name_2']
+                - type: object
+                  properties:
+                    term_list:
+                      type: string
+  
+  
       #~~
       model_outputs_specification:  
         title: Outputs
         description: Output parameters and configurations for the wind energy system
         type: object
-        additionalProperties: false
+        required:
+          - cases_run
         properties:
           output_folder:
             title: output folder name
@@ -257,7 +254,6 @@ properties:
           cases_run:
             title: Handling of the timeseries runs
             type: object
-            additionalProperties: false
             properties:
               all_occurences:
                 title: active to run all the occurences from the time series
@@ -270,7 +266,6 @@ properties:
             title: outputs related to each turbine
             description: outputs for each turbine as the individual turbine power, velocity..
             type: object
-            additionalProperties: false
             properties:
               turbine_nc_filename:
                 title: Name of the file that will contain the turbine outputs
@@ -287,7 +282,6 @@ properties:
             title: configuration of the flow field outputs
             description:  flow field output variables and files
             type: object
-            additionalProperties: false
             properties:
               report:
                 title: Report
@@ -308,7 +302,6 @@ properties:
                 title: planes at which the flow field variables will be stored
                 description: description of vertical planes
                 type: object
-                additionalProperties: false
                 properties:
                   z_sampling:
                     title: type of vertical discretization
@@ -365,7 +358,6 @@ properties:
           title: Wake model
           description: Wake model used in AEP calculations
           type: object
-          additionalProperties: false
           properties:
             name:
               title: Wake model name
