--- a/windIO/plant/outputs.yaml
+++ b/windIO/plant/outputs.yaml
@@ -24,7 +24,7 @@ properties:
     required:
       - time
       - x
-      - y      
+      - y
       - z
       - wind_speed
       - wind_direction
@@ -114,3 +114,11 @@ properties:
         title: Wind Speed in m/s
         description: Wind speed coordinates
         $ref: "common.yaml#/definitions/multi_dimensional_coordinate"
+      rotor_effective_velocity:
+        title: rotor effective velocity in m/s
+        description: Rotor effective velocity
+        $ref: "common.yaml#/definitions/multi_dimensional_data"
+      thrust:
+        title: Thrust force in N
+        description: Thrust force in N
+        $ref: "common.yaml#/definitions/multi_dimensional_data"
